k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gearsync-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gearsync-backend
  template:
    metadata:
      labels:
        app: gearsync-backend
    spec:
      containers:
        - name: backend
          image: faskath513/gearsync-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gearsync-backend
spec:
  selector:
    app: gearsync-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
