k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gearsync-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gearsync-frontend
  template:
    metadata:
      labels:
        app: gearsync-frontend
    spec:
      containers:
        - name: frontend
          image: faskath513/gearsync-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gearsync-frontend
spec:
  selector:
    app: gearsync-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
